# phantasm

./: .dockerignore  .env.example  .gitignore  .prettierrc.yml  .rustfmt.toml  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  index.html  mkdocs.yml  readme.md
.github/: CHANGELOG.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  security.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: .note  dashboard-cd.yml  dashboard-ci.yml  docs-cd.yml  sdk-python-cd.yml  server-cd.yml  server-ci.yml
clients/: .note  LICENSE
clients/python/: README.md  pyproject.toml  scripts.py
clients/python/phantasmpy/: __init__.py  client.py  scripts.py  types.py
clients/python/phantasmpy/stubs/: __init__.py
clients/python/stubs/: receiver_pb2.py  receiver_pb2_grpc.py
dashboard/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
dashboard/src/: app.css  app.html
dashboard/src/lib/: store.ts  types.ts
dashboard/src/lib/components/buttons/: action.svelte  basic.svelte  with-icon.svelte
dashboard/src/lib/components/cards/: alert.svelte  approval.svelte  connection.svelte
dashboard/src/lib/components/inputs/: field.svelte
dashboard/src/lib/components/modals/: basic.svelte
dashboard/src/lib/components/navs/: header.svelte  sidebar.svelte
dashboard/src/lib/components/utils/: title.svelte  tooltip.svelte  wordmark.svelte
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/connections/[id]/: +page.svelte  +page.ts
docs/: index.md  styles.css
docs/configuration/: index.html
docs/docs/: configuration.md  reference.md
docs/reference/: index.html
protos/: receiver.proto
search/: search_index.json
src/: main.rs  protos.rs  types.rs
src/services/: mod.rs  receiver.rs
src/types/: task.rs
