[package]
name = "phantasm"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
clap = "4.5.20"

# gRPC
tonic = "0.12.3"
prost = "0.13.3"

# Tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Utils
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12"
