[tool.poetry]
name = "phantasmpy"
version = "0.1.0"
description = "A Python client to interact with Phantasm's receiver server."
authors = ["Edwin Kys"]
readme = "../../README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.10.0"
grpcio = "^1.67.0"
grpcio-tools = "^1.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_grpc_stubs = "scripts:generate_grpc_stubs"
